Implementação de Navbar

--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,40 @@ html {
     font-family: sans-serif;
     background: linear-gradient(#141e30, #243b55);
   }
+
+/* Navbar */
+#navbar {
+  width: 100%;
+  background: rgba(0,0,0,.5);
+  color: #eee;
+  height: 70px;
+  position: fixed;
+}
+
+#navbar-container {
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.8rem;
+}
+
+#navbar-items {
+  display: flex;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+#navbar-items li a{
+  text-decoration: none;
+  color:#03e9f4 ;
+  padding: 40px;
+}
   
   .login-box {
     position: absolute;
