--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -8,7 +8,6 @@ html {
     background: linear-gradient(#141e30, #243b55);
   }
 
-  /* Navbar */
 #navbar {
   width: 100%;
   background: rgba(0,0,0,.5);
@@ -27,7 +26,6 @@ html {
 }
 
 .logo {
-
   font-size: 1.8rem;
 }
 
@@ -43,17 +41,17 @@ html {
   padding: 40px;
 }
   
-  .cad-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
+.cad-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
   }
   
   .cad-box h2 {
@@ -62,11 +60,9 @@ html {
     color: #fff;
     text-align: center;
   }
-  
   .cad-box .user-box {
     position: relative;
   }
-  
   .cad-box .user-box input {
     width: 100%;
     padding: 10px 0;
@@ -84,26 +80,18 @@ html {
     left: 0;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #03e9f4;
     pointer-events: none;
     transition: .5s;
   }
-  
-  .cad-box .user-box input:focus ~ label,
-  .cad-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 12px;
-  }
 
-  .cad-box .btn input{
-    align-items:center;
-    cursor: pointer;
+  #submit{
+    background:transparent;
+    width: 100%;
     border: none;
-    background-color:transparent ;
-    border-radius: 8px;
+    padding: 15px;
     color:#03e9f4 ;
-    padding: 8px;
-    font-size: 16px;
-  }
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 10px;
+}
