--- a/css/login.css
+++ b/css/login.css
@@ -83,26 +83,18 @@ html {
     left: 0;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #03e9f4;
     pointer-events: none;
     transition: .5s;
   }
   
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 12px;
-  }
-
-  .login-box .btn input{
-    align-items:center;
-    cursor: pointer;
+  #submit{
+    background:transparent;
+    width: 100%;
     border: none;
-    background-color:transparent ;
-    border-radius: 8px;
+    padding: 15px;
     color:#03e9f4 ;
-    padding: 8px;
-    font-size: 16px;
-  }
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 10px;
+}
