--- a/css/login.css
+++ b/css/login.css
@@ -1,14 +1,10 @@
-html {
-    height: 100%;
-  }
-  body {
+body {
+    background-color:#243b55;
+    font-family: sans-serif;
     margin:0;
     padding:0;
-    font-family: sans-serif;
-    background: linear-gradient(#141e30, #243b55);
-  }
+}
 
-/* Navbar */
 #navbar {
   width: 100%;
   background: rgba(0,0,0,.5);
@@ -26,74 +22,49 @@ html {
   align-items: center;
 }
 
-.logo {
-  font-size: 1.8rem;
-}
-
 #navbar-items {
   display: flex;
   list-style: none;
   text-transform: uppercase;
 }
-
 #navbar-items li a{
   text-decoration: none;
   color:#03e9f4 ;
   padding: 40px;
 }
+
+.logo {
+  font-size: 1.8rem;
+} 
+
+.login-box{
+  background-color: #141e30;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  padding: 75px;
+  border-radius: 15px;
+  color: white;
+  top: 50%;
+  left: 50%;
+}
+
+.login-box h2{
+  text-align: center;
+}
+
+input{
+  font-size: 15px;
+  padding: 15px;
+  border: none;
+  outline: none;
+}
   
-  .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-  }
-  
-  .login-box h2 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .login-box .user-box {
-    position: relative;
-  }
-  
-  .login-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-  }
-  .login-box .user-box label {
-    position: absolute;
-    top:0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #03e9f4;
-    pointer-events: none;
-    transition: .5s;
-  }
-  
-  #submit{
-    background:transparent;
+#submit{
+    background:dodgerblue;
     width: 100%;
     border: none;
     padding: 15px;
-    color:#03e9f4 ;
+    color:white ;
     font-size: 20px;
     cursor: pointer;
     border-radius: 10px;
