--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,12 +1,9 @@
-html {
-    height: 100%;
-  }
-  body {
-    margin:0;
-    padding:0;
-    font-family: sans-serif;
-    background: linear-gradient(#141e30, #243b55);
-  }
+body {
+  background-color:#243b55;
+  font-family: sans-serif;
+  margin:0;
+  padding:0;
+}
 
 #navbar {
   width: 100%;
@@ -40,58 +37,68 @@ html {
   color:#03e9f4 ;
   padding: 40px;
 }
-  
-.cad-box {
+
+.cad-box h2{
+  text-align: center;
+}
+
+.cad-box{
+  transform: translate(-50%,-50%);
+  background-color: #141e30;
+  border-radius: 15px;
   position: absolute;
+  padding: 75px;
+  color: white;
+  width: 20%;
   top: 50%;
   left: 50%;
-  width: 400px;
-  padding: 40px;
-  transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.5);
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
-  border-radius: 10px;
-  }
-  
-  .cad-box h2 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
-  .cad-box .user-box {
-    position: relative;
-  }
-  .cad-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-  }
-  .cad-box .user-box label {
-    position: absolute;
-    top:0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #03e9f4;
-    pointer-events: none;
-    transition: .5s;
-  }
+}
 
-  #submit{
-    background:transparent;
-    width: 100%;
-    border: none;
-    padding: 15px;
-    color:#03e9f4 ;
-    font-size: 20px;
-    cursor: pointer;
-    border-radius: 10px;
+.user-box{
+  position: relative;
+}
+
+.input-user{
+  background: none;
+  border: none;
+  border-bottom: 1px solid white;
+  outline: none;
+  color: white;
+  font-size: 15px;
+  width: 100%;
+  letter-spacing: 2px;
+}
+
+.input-user:focus ~ .label-input , 
+.input-user:valid ~ .label-input{
+  top: -20px;
+  font-size: 12px;
+  color: #03e9f4;
+}
+
+.label-input{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  pointer-events: none;
+  transition: .5s;
+}
+
+#dataNasc{
+  border: none;
+  border-radius: 10px;
+  padding: 8px;
+  outline: none;
+  font-size: 15px;
+}
+
+#submit{
+  background:dodgerblue;
+  width: 100%;
+  border: none;
+  padding: 15px;
+  color:white ;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 10px;
 }
