--- a/css/sistema.css
+++ b/css/sistema.css
@@ -1,28 +1,53 @@
-body{
-    font-family: sans-serif;
+body {
     background-color:#243b55;
-    text-align: center;
-    color: white;
-}
-
-.box{
-    transform: translate(-50%,-50%);
-    background-color: #141e30;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 30px;
-    border-radius: 15px;
-}
-
-a{
+    font-family: sans-serif;
+    margin:0;
+    padding:0;
+  }
+  
+  #navbar {
+    width: 100%;
+    background: rgba(0,0,0,.5);
+    color: #eee;
+    height: 70px;
+    position: fixed;
+  }
+  
+  #navbar-container {
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo {
+    font-size: 1.8rem;
+  }
+  
+  #navbar-items {
+    display: flex;
+    list-style: none;
+    text-transform: uppercase;
+  }
+  
+  #navbar-items li a{
     text-decoration: none;
     color:#03e9f4 ;
-    border: 3px solid dodgerblue;
-    border-radius: 10px;
-    padding: 10px;
+    padding: 40px;
   }
 
-  a:hover{
-    background-color: dodgerblue;
+  .box{
+    transform: translate(-50%,-45%);
+    align-items: center;
+    position: absolute;
+    color: white;
+    width: 20%;
+    top: 50%;
+    left: 50%;
+  }
+
+  .box h1{
+    text-align: center;
   }
